package torneo;

public class Recompensa {

}
