package appPookemon.src.registro;

public class Entrenador {

    private String nombre;
    private String genero;

    public Entrenador(String nombre, String genero){
        this.nombre = nombre;
        this.genero = genero;
    }

    public String getNombre() {
        return nombre;
    }

}
