package pookemon;

public class Movimiento {

}
