package pookemon;

public class TablaDeTipos {

}
