@startuml diagrama de clases

package "Registro" {
    class Entrenador {
        - id: String
        - nombre: String
        - genero: String
        - contraseña: String
        - pookemonActual: Pookemon

        + Entrenador(nombre: String, genero: String, contraseña: String)
        + iniciarSesion(contraseña: String)
        + obtenerPookemons()
        + obtenerPookemonActual()
        + realizarMovimiento()
        + cambiarPookemon()
        + aplicarObjeto()
        + obtenerHistorialBatallas()
        + rendirse()
    }

}

package "pookemon" {
    class Pookemon {
        - id: String
        - nombre: String
        - tipo: int
        - estadísticas: Estadística

        + obtenerInfopookemon()
        + obtenerEstadísticas()
        + obtenerMovimientos()
        + calcularDaño(nombreAtaque: String, pokemonEnemigo: pookemon)
        + recibirDaño(dañoRecibido: float)
    }

    class Estadística {
        - hp: int
        - ataque: int
        - defensa: int
        - ataqueEspecial: int
        - defensaEspecial: int
        - velocidad: int

        + obtenerHP()
        + obtenerAtaque()
        + obtenerDefensa()
        + obtenerAtaqueEspecial()
        + obtenerDefensaEspecial()
        + obtenerVelocidad()
    }

    class Movimiento {
        - id: String
        - nombre: String
        - tipo: int
        - poder: int
        - pp: int

        + obtenerInfoMovimiento()
        + obtenerPoder()
        + obtenerPP()
    }

    class TablaDeTipos{
        - tabla: float[][] 

        + obtenerEfectividad(tipoAtaque: int, tipoPookemon: int)
    }

    class Objeto{
        - nombre: String
        - tipo: String
    }

}

package "batalla" {
    class Batalla {
        - id: String
        - entrenador1: Entrenador
        - entrenador2: Entrenador
        - ganador: Entrenador
        - perdedor: Entrenador
        - registroBatalla: List<RegistroBatalla>

        + Batalla(entrenador1: Entrenador, entrenador2: Entrenador)
        + asignarPookemones()
        + realizarTurno()
        + finalizarBatalla()
        + obtenerRegistroBatalla()
    }

    class RegistroBatalla {
        - id: String
        - batalla: Batalla
        - movimiento: Movimiento
        - dañoHecho: int
        - dañoRecibido: int

        + obtenerInfoRegistroBatalla()
        + obtenerDañoHecho()
        + obtenerDañoRecibido()
    }

   
}

package "torneo" {
    class NodoTorneo {
        - padre: NodoTorneo
        - entrenador: Entrenador
        - batalla: Batalla
        - hijoIzquierdo: NodoTorneo
        - hijoDerecho: NodoTorneo
        

        + NodoTorneo(entrenador: Entrenador)
        + obtenerEntrenador()
        + obtenerHijoIzquierdo()
        + obtenerHijoDerecho()
        + obtenerPadre()
    }

    class Torneo {
        - id: String
        - raiz: NodoTorneo

        + Torneo()
        + agregarEntrenador(entrenador: Entrenador)
        + iniciarBatalla()
        + finalizarTorneo()
    }

}

package "Sistema" {
    class CPU {
        - id: String
        - entrenador: Entrenador

        + CPU(entrenador: Entrenador)
        + realizarMovimiento()
    }

    class Recompensa {
        - id: String
        - torneo: Torneo
        - recompensa: String

        + Recompensa(torneo: Torneo)
        + obtenerRecompensa()
    }
}

Pookemon "*" o-- "5" Movimiento
Pookemon "1" *-- "1" Estadística
Pookemon -- TablaDeTipos

Entrenador "*" o-- "6" Pookemon 
Entrenador "1" --o "1" NodoTorneo
Entrenador "*" o-- "6" Objeto

Batalla "1" *--"1" RegistroBatalla

Torneo "1" o-- "1" NodoTorneo

NodoTorneo "1" *-- "1" Batalla

CPU "1" *-- "1" Entrenador

Recompensa "1" *-- "1" Torneo

@enduml
